Making projects use the same application insights versions. Fixed test issues with clashing xunit versions. Fixed misnamed ScenarioTests.ResourceManager assembly name. Make the build.proj build properly and do testing.

--- a/src/Commands.Common.CustomAttributes.Test/Commands.Common.CustomAttributes.Test.csproj
+++ b/src/Commands.Common.CustomAttributes.Test/Commands.Common.CustomAttributes.Test.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
