--- a/src/Commands.Common.Test/packages.config
+++ b/src/Commands.Common.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Hyak.Common" version="1.0.3" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
@@ -22,6 +23,8 @@
   <package id="Microsoft.WindowsAzure.Management.Compute" version="14.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.Storage" version="6.0.1" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
+  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net452" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net452" />
