--- a/src/Commands.ScenarioTests.Common/packages.config
+++ b/src/Commands.ScenarioTests.Common/packages.config
@@ -14,6 +14,8 @@
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.3.1" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management" version="4.1.1" targetFramework="net45" />
+  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
