--- a/src/Commands.ScenarioTests.ResourceManager.Common/Commands.ScenarioTests.ResourceManager.Common.nuspec
+++ b/src/Commands.ScenarioTests.ResourceManager.Common/Commands.ScenarioTests.ResourceManager.Common.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.ScenarioTests.ResourceManager.Common</id>
+    <id>Microsoft.Azure.Commands.ScenarioTest.Common</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell ScenarioTests ResourceManager</title>
     <authors>Microsoft Corporation</authors>
