--- a/src/Commands.Common.Compute.Tests/Common.Compute.Tests.Netcore.csproj
+++ b/src/Commands.Common.Compute.Tests/Common.Compute.Tests.Netcore.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>Microsoft.Azure.Commands.Common.Compute.Tests</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Compute.Tests</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <OutputPath>$(SolutionDir)artifacts\$(Configuration)</OutputPath>
+    <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
