--- a/src/Commands.Common.Storage/Common.Storage.Netcore.csproj
+++ b/src/Commands.Common.Storage/Common.Storage.Netcore.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>Microsoft.WindowsAzure.Commands.Common.Storage</AssemblyName>
     <RootNamespace>Microsoft.WindowsAzure.Commands.Common.Storage</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <OutputPath>$(SolutionDir)artifacts\$(Configuration)</OutputPath>
+    <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
@@ -20,7 +20,8 @@
     <Copyright>Copyright © Microsoft Corporation</Copyright>
     <PackageLicenseUrl>https://raw.githubusercontent.com/Azure/azure-powershell/preview/LICENSE.txt</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Azure/azure-powershell</PackageProjectUrl>
-    <PackageOutputPath>$(SolutionDir)artifacts\Package\$(Configuration)</PackageOutputPath>
+    <PackageOutputPath>$(ProjectDir)..\..\artifacts\Package\$(Configuration)</PackageOutputPath>
+    <PackageVersion>1.0.0-preview</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
