--- a/src/Commands.Common.Strategies.UnitTest/Commands.Common.Strategies.UnitTest.Netcore.csproj
+++ b/src/Commands.Common.Strategies.UnitTest/Commands.Common.Strategies.UnitTest.Netcore.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>Microsoft.Azure.Commands.Common.Strategies.UnitTest</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Strategies.UnitTest</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <OutputPath>$(SolutionDir)artifacts\$(Configuration)</OutputPath>
+    <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
