--- a/src/Commands.Common.Strategies/Commands.Common.Strategies.nuspec
+++ b/src/Commands.Common.Strategies/Commands.Common.Strategies.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Microsoft.Azure.Commands.Common.Strategies.4</id>
-    <version>1.0.0</version>
+    <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell Strategies</title>
     <authors>Microsoft Corporation</authors>
     <owners>Microsoft Corporation</owners>
