--- a/src/Commands.ServiceManagement.Common/Commands.ServiceManagement.Common.nuspec
+++ b/src/Commands.ServiceManagement.Common/Commands.ServiceManagement.Common.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Microsoft.WindowsAzure.Commands.ServiceManagement.Common</id>
-    <version>1.0.0</version>
+    <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell ServiceManagement</title>
     <authors>Microsoft Corporation</authors>
     <owners>Microsoft Corporation</owners>
