Fixed the system.xml.linq resolution issue.

--- a/src/Commands.ScenarioTests.Common/Commands.ScenarioTests.Common.csproj
+++ b/src/Commands.ScenarioTests.Common/Commands.ScenarioTests.Common.csproj
@@ -121,7 +121,7 @@
       <HintPath>..\..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
