--- a/src/Commands.Common.Authentication.Abstractions/Commands.Common.Authentication.Abstractions.csproj
+++ b/src/Commands.Common.Authentication.Abstractions/Commands.Common.Authentication.Abstractions.csproj
@@ -92,6 +92,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthenticationStore.cs" />
