--- a/src/Commands.Common.Authentication.ResourceManager/Commands.Common.Authentication.ResourceManager.csproj
+++ b/src/Commands.Common.Authentication.ResourceManager/Commands.Common.Authentication.ResourceManager.csproj
@@ -67,6 +67,7 @@
     </Reference>
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureRmAutosaveProfile.cs" />
