--- a/src/Commands.Common.Authentication.Test/Commands.Common.Authentication.Test.csproj
+++ b/src/Commands.Common.Authentication.Test/Commands.Common.Authentication.Test.csproj
@@ -117,6 +117,7 @@
       <HintPath>..\..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureSessionTests.cs" />
