--- a/src/Commands.Common.Authentication/Commands.Common.Authentication.csproj
+++ b/src/Commands.Common.Authentication/Commands.Common.Authentication.csproj
@@ -115,6 +115,7 @@
     </Reference>
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication\AuthenticationStoreTokenCache.cs" />
