--- a/src/Commands.Common.Compute.Tests/Commands.Common.Compute.Tests.csproj
+++ b/src/Commands.Common.Compute.Tests/Commands.Common.Compute.Tests.csproj
@@ -65,6 +65,7 @@
     <Reference Include="xunit.execution.desktop, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CredentialManager.cs" />
