--- a/src/Commands.Common.Network/Commands.Common.Network.csproj
+++ b/src/Commands.Common.Network/Commands.Common.Network.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\INetworkInterfaceReference.cs" />
