--- a/src/Commands.Common.Storage/Commands.Common.Storage.csproj
+++ b/src/Commands.Common.Storage/Commands.Common.Storage.csproj
@@ -66,6 +66,7 @@
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IStorageService.cs" />
