--- a/src/Commands.Common/Commands.Common.csproj
+++ b/src/Commands.Common/Commands.Common.csproj
@@ -111,7 +111,7 @@
       <HintPath>..\..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomAttributes\GenericBreakingChangeAttribute.cs" />
