Made SMA copy to the local build directory.

--- a/src/Commands.Common.CustomAttributes.Test/Commands.Common.CustomAttributes.Test.csproj
+++ b/src/Commands.Common.CustomAttributes.Test/Commands.Common.CustomAttributes.Test.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
