--- a/src/Commands.Common.Graph.RBAC/Commands.Common.Graph.RBAC.csproj
+++ b/src/Commands.Common.Graph.RBAC/Commands.Common.Graph.RBAC.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
