--- a/src/Common.Dependencies.Test.targets
+++ b/src/Common.Dependencies.Test.targets
@@ -15,6 +15,7 @@
     </Reference>
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
  </Project>
