Fixed SMA references for all desktop projects that use SMA.

--- a/src/Commands.Common.Test/Commands.Common.Test.csproj
+++ b/src/Commands.Common.Test/Commands.Common.Test.csproj
@@ -149,7 +149,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.PowerShell.5.ReferenceAssemblies.1.1.0\lib\net4\System.Management.Automation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net" />
@@ -252,7 +252,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="MSSharedLibKey.snk" />
     <EmbeddedResource Include="Resources\Azure.publishsettings">
       <SubType>Designer</SubType>
     </EmbeddedResource>
