--- a/src/Commands.Common.Test/packages.config
+++ b/src/Commands.Common.Test/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.28.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.2.9-preview" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.0" targetFramework="net45" />
