--- a/src/Commands.ScenarioTests.ResourceManager.Common/packages.config
+++ b/src/Commands.ScenarioTests.ResourceManager.Common/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.28.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.3.1" targetFramework="net45" />
