--- a/src/Common.Dependencies.Test.targets
+++ b/src/Common.Dependencies.Test.targets
@@ -2,7 +2,7 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LibraryRoot>$(MSBuildThisFileDirectory)\..\</LibraryRoot>
-    <LibraryNugetPackageFolder>$(LibraryRoot)src\packages</LibraryNugetPackageFolder>
+    <LibraryNugetPackageFolder>$(LibraryRoot)packages</LibraryNugetPackageFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Rest.ClientRuntime">
@@ -14,7 +14,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
+      <HintPath>$(LibraryNugetPackageFolder)\Microsoft.PowerShell.5.ReferenceAssemblies.1.1.0\lib\net4\System.Management.Automation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
