Fix several issues with test cases and code
Fix several issues with test cases and code now New-, Get-, Remove- should work as expected.

--- a/src/ResourceManager/Search/Commands.Management.Search.Test/Commands.Management.Search.Test.csproj
+++ b/src/ResourceManager/Search/Commands.Management.Search.Test/Commands.Management.Search.Test.csproj
@@ -135,7 +135,13 @@
     <None Include="ScenarioTests\SearchServiceTests.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestNewAccount.json">
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestGetSearchService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestNewSearchService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestRemoveSearchService.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
