Made the build able to collect test results for debug build.

--- a/.gitignore
+++ b/.gitignore
@@ -224,13 +224,9 @@ groupMapping*.json
 *.wixpdb
 
 .vscode/
-/tools/AutomationTestFramework/Runbooks
 Results
 Package
 .DS_Store
 .idea
-/src/ResourceManager/RecoveryServices.Backup/**/bin
 launchSettings.json
-/src/StackAdmin/AzureRM/AzureRM.psm1
-/src/StackAdmin/AzureStack/AzureStack.psm1
-/tools/AzureRM.Netcore/AzureRM.Netcore.psm1
+/artifacts
