Now all commands are implemented and UTs pass
Now all commands are implemented and UTs pass

--- a/src/ResourceManager/Search/Commands.Management.Search.Test/Commands.Management.Search.Test.csproj
+++ b/src/ResourceManager/Search/Commands.Management.Search.Test/Commands.Management.Search.Test.csproj
@@ -138,10 +138,19 @@
     <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestGetSearchService.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestManageSearchServiceAdminKey.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestManageSearchServiceQueryKey.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestNewSearchService.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestRemoveSearchService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.Management.Search.Test.ScenarioTests.SearchServiceTests\TestSetSearchService.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
