--- a/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
+++ b/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
@@ -45,11 +45,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\PSSearchAdminKey.cs" />
+    <Compile Include="Models\PSSearchQueryKey.cs" />
     <Compile Include="Models\PSSearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchService\GetSearchServiceAdminKeyPairCommand.cs" />
     <Compile Include="SearchService\GetSearchServiceCommand.cs" />
+    <Compile Include="SearchService\GetSearchServiceQueryKeyCommand.cs" />
+    <Compile Include="SearchService\NewSearchServiceAdminKeyCommand.cs" />
     <Compile Include="SearchService\NewSearchServiceCommand.cs" />
+    <Compile Include="SearchService\NewSearchServiceQueryKeyCommand.cs" />
     <Compile Include="SearchService\RemoveSearchServiceCommand.cs" />
+    <Compile Include="SearchService\RemoveSearchServiceQueryKey.cs" />
     <Compile Include="SearchService\SearchManagementClient.cs" />
     <Compile Include="SearchService\SearchServiceBaseCmdlet.cs" />
     <Compile Include="SearchService\SetSearchServiceCommand.cs" />
