Fixed assembly name (and other assembly info) for every project. THIS COMMIT IS STILL NOT BUILDABLE.

--- a/src/Authentication.Abstractions/Authentication.Abstractions.csproj
+++ b/src/Authentication.Abstractions/Authentication.Abstractions.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Authentication.Abstractions</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Authentication.Abstractions</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Authentication.Abstractions</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
