--- a/src/Graph.Rbac/Graph.Rbac.csproj
+++ b/src/Graph.Rbac/Graph.Rbac.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Graph.RBAC</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Graph.RBAC</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Graph.Rbac</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
