--- a/src/Storage.Management/Storage.Management.nuspec
+++ b/src/Storage.Management/Storage.Management.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.Common.Storage.Management</id>
+    <id>Microsoft.Azure.PowerShell.Storage.Management</id>
     <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell Storage Management</title>
     <authors>Microsoft Corporation</authors>
