--- a/src/Aks/Aks.Netcore.csproj
+++ b/src/Aks/Aks.Netcore.csproj
@@ -4,7 +4,7 @@
   
    <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Aks</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Aks</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Aks</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
