--- a/src/Aks/Aks.csproj
+++ b/src/Aks/Aks.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Aks</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Aks</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Aks</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseIntermediateOutputPath>$(ProjectDir)obj\$(Configuration)\net452</BaseIntermediateOutputPath>
