--- a/src/Authentication.Abstractions/Abstractions.Netcore.csproj
+++ b/src/Authentication.Abstractions/Abstractions.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Authentication.Abstractions</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Authentication.Abstractions</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Authentication.Abstractions</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
