--- a/src/Authentication.Abstractions/Authentication.Abstractions.nuspec
+++ b/src/Authentication.Abstractions/Authentication.Abstractions.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.Common.Authentication.Abstractions</id>
+    <id>Microsoft.Azure.PowerShell.Authentication.Abstractions</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell Authentication Abstractions</title>
     <authors>Microsoft Corporation</authors>
