--- a/src/Authentication.ResourceManager/Authentication.ResourceManager.Netcore.csproj
+++ b/src/Authentication.ResourceManager/Authentication.ResourceManager.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Authentication.ResourceManager</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Authentication.ResourceManager</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Authentication.ResourceManager</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
