--- a/src/Authentication/Authentication.csproj
+++ b/src/Authentication/Authentication.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Authentication</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Authentication</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Authentication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
