--- a/src/Authentication/Authentication.nuspec
+++ b/src/Authentication/Authentication.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.Common.Authentication</id>
+    <id>Microsoft.Azure.PowerShell.Authentication</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell Authentication</title>
     <authors>Microsoft Corporation</authors>
