--- a/src/Authorization/Authorization.csproj
+++ b/src/Authorization/Authorization.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Authorization</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Authorization</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Authorization</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
