--- a/src/Common/Common.Netcore.csproj
+++ b/src/Common/Common.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.WindowsAzure.Commands.Common</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Common</AssemblyName>
     <RootNamespace>Microsoft.WindowsAzure.Commands.Common</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
