--- a/src/Common/Common.nuspec
+++ b/src/Common/Common.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.WindowsAzure.Commands.Common</id>
+    <id>Microsoft.Azure.PowerShell.Common</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell Common</title>
     <authors>Microsoft Corporation</authors>
