--- a/src/Compute.Test/Compute.Test.csproj
+++ b/src/Compute.Test/Compute.Test.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Compute.Tests</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Compute.Tests</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Compute.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
