--- a/src/Compute/Compute.Netcore.csproj
+++ b/src/Compute/Compute.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Compute</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Compute</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Compute</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
