--- a/src/Compute/Compute.csproj
+++ b/src/Compute/Compute.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Compute</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Compute</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Compute</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseIntermediateOutputPath>$(ProjectDir)obj\$(Configuration)\net452</BaseIntermediateOutputPath>
