--- a/src/Network/Network.Netcore.csproj
+++ b/src/Network/Network.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Network</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Network</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Network</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
