--- a/src/Network/Network.csproj
+++ b/src/Network/Network.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Network</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Network</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Network</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
