--- a/src/ResourceManager/ResourceManager.csproj
+++ b/src/ResourceManager/ResourceManager.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.ResourceManager.Common</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.ResourceManager.Common</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.ResourceManager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
