--- a/src/ScenarioTests.ResourceManager/ScenarioTests.ResourceManager.csproj
+++ b/src/ScenarioTests.ResourceManager/ScenarioTests.ResourceManager.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.ScenarioTest</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.ScenarioTest.Common</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.ScenarioTest.ResourceManager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
