--- a/src/ScenarioTests.ResourceManager/ScenarioTests.ResourceManager.nuspec
+++ b/src/ScenarioTests.ResourceManager/ScenarioTests.ResourceManager.nuspec
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.ScenarioTest.Common</id>
+    <id>Microsoft.Azure.PowerShell.ScenarioTest.ResourceManager</id>
     <version>1.0.0</version>
-    <title>Microsoft Azure PowerShell ScenarioTests ResourceManager</title>
+    <title>Microsoft Azure PowerShell ScenarioTest ResourceManager</title>
     <authors>Microsoft Corporation</authors>
     <owners>Microsoft Corporation</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://raw.githubusercontent.com/Azure/azure-powershell/preview/LICENSE.txt</licenseUrl>
     <projectUrl>https://github.com/Azure/azure-powershell</projectUrl>
-    <description>Microsoft Azure PowerShell ScenarioTests ResourceManager library</description>
+    <description>Microsoft Azure PowerShell ScenarioTest ResourceManager library</description>
     <copyright>Copyright © Microsoft Corporation</copyright>
-    <tags>azure powershell scenariotests resourcemanager</tags>
+    <tags>azure powershell scenariotest resourcemanager</tags>
   </metadata>
 </package>
