--- a/src/ScenarioTests/ScenarioTests.csproj
+++ b/src/ScenarioTests/ScenarioTests.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.WindowsAzure.Commands.ScenarioTest</RootNamespace>
-    <AssemblyName>Microsoft.WindowsAzure.Commands.ScenarioTest.Common</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.ScenarioTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
