--- a/src/ScenarioTests/ScenarioTests.nuspec
+++ b/src/ScenarioTests/ScenarioTests.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.WindowsAzure.Commands.ScenarioTest.Common</id>
+    <id>Microsoft.Azure.PowerShell.ScenarioTest</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell ScenarioTest</title>
     <authors>Microsoft Corporation</authors>
