--- a/src/ServiceManagement/ServiceManagement.nuspec
+++ b/src/ServiceManagement/ServiceManagement.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.WindowsAzure.Commands.ServiceManagement.Common</id>
+    <id>Microsoft.Azure.PowerShell.ServiceManagement</id>
     <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell ServiceManagement</title>
     <authors>Microsoft Corporation</authors>
