--- a/src/Storage.Management/Storage.Management.csproj
+++ b/src/Storage.Management/Storage.Management.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Storage.Management</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Storage.Management</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Storage.Management</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
