--- a/src/Storage/Storage.Netcore.csproj
+++ b/src/Storage/Storage.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.WindowsAzure.Commands.Common.Storage</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Storage</AssemblyName>
     <RootNamespace>Microsoft.WindowsAzure.Commands.Common.Storage</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
