--- a/src/Strategies.Test/Strategies.Test.csproj
+++ b/src/Strategies.Test/Strategies.Test.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Strategies.UnitTest</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Strategies.UnitTest</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Strategies.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseIntermediateOutputPath>$(ProjectDir)obj\$(Configuration)\net452</BaseIntermediateOutputPath>
