--- a/src/Strategies/Strategies.Netcore.csproj
+++ b/src/Strategies/Strategies.Netcore.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Strategies.4</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Strategies</AssemblyName>
     <RootNamespace>Microsoft.Azure.Commands.Common.Strategies</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
