--- a/src/Strategies/Strategies.csproj
+++ b/src/Strategies/Strategies.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Azure.Commands.Common.Strategies</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.Common.Strategies.4</AssemblyName>
+    <AssemblyName>Microsoft.Azure.PowerShell.Strategies</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseIntermediateOutputPath>$(ProjectDir)obj\$(Configuration)\net452</BaseIntermediateOutputPath>
