--- a/src/Strategies/Strategies.nuspec
+++ b/src/Strategies/Strategies.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.Common.Strategies.4</id>
+    <id>Microsoft.Azure.PowerShell.Strategies</id>
     <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell Strategies</title>
     <authors>Microsoft Corporation</authors>
