--- a/src/Websites/Websites.nuspec
+++ b/src/Websites/Websites.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.Azure.Commands.Common.Websites</id>
+    <id>Microsoft.Azure.PowerShell.Websites</id>
     <version>1.0.0</version>
     <title>Microsoft Azure PowerShell Websites</title>
     <authors>Microsoft Corporation</authors>
